# poker-decisions

./: README.md  import_dataset.py  import_dataset_XGBoost.py  import_dataset_XGBoost_hard_coded_premium.py  import_dataset_XGBoost_sampling.py  import_dataset_with_samples.py  pyproject.toml  recommend.py  requirements.txt  run_example.py  test_app.py  test_for_user.py  utils_old.py
docs/anaconda_projects/db/: report.html  report.ipynb
model/: feature_columns.pkl  label_encoder.pkl  poker_model.pkl
src/: app.py  script.py
src/HoldemHelper/: __init__.py  hand_strengths.py  import_dataset.py  recommend.py  script.py  utils.py
src/HoldemHelper.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_for_user.py
