[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "HoldemHelper"
version = "0.0.1"
authors = [
  { name="Maxim Kurvink", email="maxim.kurvink@student.uva.nl" },
]
description = "A package to aid in making informed poker decisions."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE*"]

[project.urls]
Homepage = "https://github.com/maximkurvink/poker-decisions"
Issues = "https://github.com/maximkurvink/poker-decisions/issues"

[project.scripts]
holdem-app = "streamlit.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/HoldemHelper"]

dependencies = [
    "datasets", 
    "pandas",
    "scikit-learn",
    "xgboost",
    "joblib",
    "streamlit"
]