[tool.poetry]
name = "HoldemHelper"
version = "0.1.0"
description = "A package to aid in making informed poker decisions."
authors = ["Maxim Kurvink <maxim.kurvink@student.uva.nl>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "HoldemHelper", from = "src" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent"
]
include = ["LICENSE"]

[tool.poetry.dependencies]
python = ">=3.9"
pandas = "*"
scikit-learn = "*"
xgboost = "*"
joblib = "*"
datasets = "*"
streamlit = "*"
plotly = "*"

[tool.poetry.scripts]
holdem-app = "streamlit.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.poetry.urls]
"Homepage" = "https://github.com/maximkurvink/poker-decisions"
"Issues" = "https://github.com/maximkurvink/poker-decisions/issues"