[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "HoldemHelper"
version = "0.1.0"
description = "A package to aid in making informed poker decisions."
authors = [
  { name = "Maxim Kurvink", email = "maxim.kurvink@student.uva.nl" }
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "pandas",
  "scikit-learn",
  "xgboost",
  "joblib",
  "datasets",
  "streamlit",
  "plotly"
]

[tool.setuptools.package-data]
"HoldemHelper" = ["model/*.pkl"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://github.com/maximkurvink/poker-decisions"
Issues = "https://github.com/maximkurvink/poker-decisions/issues"